--- a/client/index.html
+++ b/client/index.html
@@ -3,8 +3,8 @@
 <head>
     <title>Banglore Home Price Prediction</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="app J.js"></script>
-	<link rel="stylesheet" href="app C.css">
+    <script src="index.js"></script>
+	<link rel="stylesheet" href="index.css">
 </head>
 <body>
 <div class="img"></div>
